# apk_auto_test

./: .gitignore  CLAUDE.md  README.md  README.zh.md  ruff.toml
perf_auto_test/scripts/: pyproject.toml  requirements-dev.txt  requirements.txt
perf_auto_test/scripts/pat/: __init__.py  alerting.py  api.py  cli.py  pool.py  storage.py
perf_auto_test/scripts/pat/demo/: generate_demo.py  screenshot.py
perf_auto_test/scripts/pat/dumpers/: heap.py  thread_cpu.py
perf_auto_test/scripts/pat/reporter/: html.py  markdown.py
perf_auto_test/scripts/perf_auto_test/: __init__.py  api.py  cli.py  status.py  utils.py
perf_auto_test/scripts/perf_auto_test/collectors/: cpu.py  memory.py
perf_auto_test/scripts/schemas/: report.schema.json
perf_auto_test/scripts/tests/: conftest.py  test_adb.py  test_alerting.py  test_api.py  test_bookmark.py  test_cli.py  test_cpu_collector.py  test_device.py  test_discovery.py  test_dumpers.py  test_memory_collector.py  test_pool.py  test_reporter_renderers.py  test_reporter_result.py  test_status.py  test_storage.py
stability_auto_test/scripts/: config.example.yaml  pyproject.toml
stability_auto_test/scripts/sat/: __init__.py  adb.py  api.py  bookmark.py  cli.py  detection.py  device.py  discovery.py  pool.py  storage.py
stability_auto_test/scripts/schemas/: report.schema.json
stability_auto_test/scripts/tests/: conftest.py  test_api.py  test_cli.py  test_collector_dropbox.py  test_collector_logcat.py  test_detection.py  test_dumpers.py  test_pool.py  test_reporter_html.py  test_reporter_result.py  test_storage.py
(+47 files in other folders)
