[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "perf-auto-test"
version = "0.1.0"
description = "Generic Android APK performance auto-test: CPU/memory collection, threshold alerting, dump capture, and report generation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0",
    "pandas>=2.0",
    "plotly>=5.18",
    "jsonschema>=4.20",
]

[project.scripts]
perf-auto-test = "perf_auto_test.cli:main"

[tool.setuptools.packages.find]
where = ["."]
